calico-policies/public-network-isolation/us-east/allow-egress-pods-public.yaml
# This policy opens port 53 for DNS (5353 for OpenShift 4.3 and later),
# port 2049 for communication with NFS file servers, ports 443 and 3260
# for communication to block storage
10250 for VPN pod, and
# port 2040 and 443 on 172.21.0.1 for the master API server local proxy.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-public
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      nets:
      # Nets for US East: mon01, tor01, wdc04, wdc06, wdc07
      - 169.47.174.106/32
      - 169.53.167.50/32
      - 169.53.171.210/32
      - 169.54.80.106/32
      - 169.54.126.219/32
      - 169.60.73.142/32
      - 169.60.101.42/32
      - 169.61.74.210/32
      - 169.61.83.62/32
      - 169.61.109.34/32
      - 169.63.88.178/32
      - 169.63.88.186/32
      - 169.63.149.122/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for US East: mon01, tor01, wdc04, wdc06, wdc07
      - 169.47.174.106/32
      - 169.53.167.50/32
      - 169.53.171.210/32
      - 169.54.80.106/32
      - 169.54.126.219/32
      - 169.60.73.142/32
      - 169.60.101.42/32
      - 169.61.74.210/32
      - 169.61.83.62/32
      - 169.61.109.34/32
      - 169.63.88.178/32
      - 169.63.88.186/32
      - 169.63.149.122/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
