calico-policies/public-network-isolation/us-east/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of
# your cluster to the cluster master through the public service endpoint. Note
# that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for US East: mon01, tor01, tor04, tor05, wdc04, wdc06, wdc07
      - 52.117.88.42/32
      - 158.85.77.114/32
      - 158.85.110.18/32
      - 163.74.65.242/32
      - 163.75.64.122/32
      - 163.74.65.250/32
      - 163.75.64.162/32
      - 169.47.174.106/32
      - 169.47.162.130/32
      - 169.53.167.50/32
      - 169.53.171.210/32
      - 169.54.126.219/32
      - 169.54.80.106/32
      - 169.60.73.142/32
      - 169.60.92.50/32
      - 169.60.100.242/32
      - 169.60.101.42/32
      - 169.61.109.34/32
      - 169.61.74.210/32
      - 169.61.83.62/32
      - 169.62.9.250/32
      - 169.62.10.2/32
      - 169.62.10.162/32
      - 169.63.111.82/32
      - 169.63.149.122/32
      - 169.63.158.82/32
      - 169.63.160.130/32
      - 169.63.75.82/32
      - 169.63.88.178/32
      - 169.63.88.186/32
      - 169.63.94.210/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for US East: mon01, tor01, tor04, tor05, wdc04, wdc06, wdc07
      - 52.117.88.42/32
      - 158.85.77.114/32
      - 158.85.110.18/32
      - 163.74.65.242/32
      - 163.75.64.122/32
      - 163.74.65.250/32
      - 163.75.64.162/32
      - 169.47.174.106/32
      - 169.47.162.130/32
      - 169.53.167.50/32
      - 169.53.171.210/32
      - 169.54.126.219/32
      - 169.54.80.106/32
      - 169.60.73.142/32
      - 169.60.92.50/32
      - 169.60.100.242/32
      - 169.60.101.42/32
      - 169.61.109.34/32
      - 169.61.74.210/32
      - 169.61.83.62/32
      - 169.62.9.250/32
      - 169.62.10.2/32
      - 169.62.10.162/32
      - 169.63.111.82/32
      - 169.63.149.122/32
      - 169.63.158.82/32
      - 169.63.160.130/32
      - 169.63.75.82/32
      - 169.63.88.178/32
      - 169.63.88.186/32
      - 169.63.94.210/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_public'
  types:
  - Egress
