calico-policies/public-network-isolation/us-east/allow-public-services.yaml
# This policy allows outgoing network traffic from worker nodes to other IBM Cloud services.
# The example nets and ports in this policy are for IBM Cloud Container Registry, IBM Cloud
# IBM Cloud Monitoring, IBM Cloud Logs, and the managed Istio add-on.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 169.60.98.80/29
      - 169.62.37.240/29
      - 169.63.104.232/29
      - 169.47.153.160/28 
      - 103.41.69.127/32
      - 103.41.69.114/32
      - 103.41.69.115/32
      # IBM Cloud Container Registry: US South & US East nets for your own registry
      - 169.61.46.80/29
      - 169.61.135.160/29
      - 169.61.234.224/29
      - 103.41.70.137/32
      - 103.41.70.138/32
      - 103.41.70.140/32
      - 103.41.70.145/32
      - 103.41.70.146/32
      - 103.41.70.148/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring: us-east
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints
      - 169.60.112.74/32
      - 169.55.109.114/32
      - 169.62.3.82/32
      # backup pools IBM Cloud Monitoring: US East nets
      - 169.47.136.237/32
      - 169.47.35.174/32
      - 169.61.109.59/32
      - 169.61.65.234/32
      - 169.63.158.254/32
      - 169.63.163.50/32
      # IBM Cloud Monitoring: ca-tor subnets
      - 163.74.69.186/32
      - 158.85.94.130/32
      - 163.75.65.237/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: US East nets
      - 169.47.43.67/32
      - 169.47.52.83/32
      - 169.60.95.75/32
      - 169.61.65.235/32
      - 169.62.55.212/32
      - 169.63.163.51/32
      # New IP addresses added on 1/19/2023
      - 169.47.134.86/32
      - 169.60.72.62/32
      - 169.61.107.10/32
      # End new IP address list
      # CIDR Blocks added on 7/26/2023
      - 52.117.100.16/28
      - 52.117.81.128/26
      - 150.239.98.0/26
      - 169.47.188.0/27
      - 169.47.54.16/28
      - 169.59.154.128/26
      - 169.60.120.32/27
      - 169.60.83.144/28
      - 169.62.40.192/27
      # End CIDR Blocks
      ports:
      - 443
      - 80
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Egress gateway
      - 80
      - 15443
    protocol: TCP
    source: {}
  ingress:
  - action: Allow
    destination:
      ports:
      # Managed Istio add-on: Ingress gateway and istiod control plane
      - 443
      - 853
      - 15010
      - 15012
      - 15014
      # Managed Istio add-on: Knative cluster local gateway
      - 80
      - 15021
      - 15443
    protocol: TCP
    source: {}
  order: 1800
  selector: ibm.role == 'worker_public'
  types:
  - Egress
  - Ingress
